syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.model;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "zigbeealliance/distributedcomplianceledger/model/vendor_products.proto";
import "zigbeealliance/distributedcomplianceledger/model/model.proto";
import "zigbeealliance/distributedcomplianceledger/model/model_version.proto";
import "zigbeealliance/distributedcomplianceledger/model/model_versions.proto";
// this line is used by starport scaffolding # 1
import "gogoproto/gogo.proto";

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/model/types";

// Query defines the gRPC querier service.
service Query {
    // Queries VendorProducts by index.
	rpc VendorProducts(QueryGetVendorProductsRequest) returns (QueryGetVendorProductsResponse) {
		option (google.api.http).get = "/dcl/model/models/{vid}";
	}

	// Queries a Model by index.
	rpc Model(QueryGetModelRequest) returns (QueryGetModelResponse) {
		option (google.api.http).get = "/dcl/model/models/{vid}/{pid}";
	}

	// Queries a list of all Model items.
	rpc ModelAll(QueryAllModelRequest) returns (QueryAllModelResponse) {
		option (google.api.http).get = "/dcl/model/models";
	}

	// Queries a ModelVersion by index.
	rpc ModelVersion(QueryGetModelVersionRequest) returns (QueryGetModelVersionResponse) {
		option (google.api.http).get = "/dcl/model/versions/{vid}/{pid}/{softwareVersion}";
	}

	// Queries ModelVersions by index.
	rpc ModelVersions(QueryGetModelVersionsRequest) returns (QueryGetModelVersionsResponse) {
		option (google.api.http).get = "/dcl/model/versions/{vid}/{pid}";
	}

// this line is used by starport scaffolding # 2
}

message QueryGetVendorProductsRequest {
	  int32 vid = 1;

}

message QueryGetVendorProductsResponse {
	VendorProducts vendorProducts = 1 [(gogoproto.nullable) = false];
}

message QueryGetModelRequest {
	  int32 vid = 1;
  int32 pid = 2;

}

message QueryGetModelResponse {
	Model model = 1 [(gogoproto.nullable) = false];
}

message QueryAllModelRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllModelResponse {
	repeated Model model = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetModelVersionRequest {
	  int32 vid = 1;
  int32 pid = 2;
  uint32 softwareVersion = 3;

}

message QueryGetModelVersionResponse {
	ModelVersion modelVersion = 1 [(gogoproto.nullable) = false];
}

message QueryGetModelVersionsRequest {
	  int32 vid = 1;
  int32 pid = 2;

}

message QueryGetModelVersionsResponse {
	ModelVersions modelVersions = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3
